--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,53 @@
+body {
+  background-color: rgb(224, 215, 204);
+}
+select {
+  display: block;
+  width: 100%;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 18px;
+}
 h1 {
   text-align: center;
+  font-size: 36px;
+}
+h2 {
+  margin: 0;
+  font-size: 24px;
+}
+footer {
+  text-align: center;
+  font-size: 15px;
+}
+
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  background-color: white;
+  padding: 30px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
+}
+.city {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  padding: 15px 0;
+  border-bottom: 1px dotted grey;
+}
+.city:last-child {
+  border: none;
+}
+.date {
+  opacity: 0.5;
+}
+.time {
+  font-size: 36px;
+  font-weight: bold;
+}
+.time small {
+  font-size: 18px;
+  line-height: 36px;
+  vertical-align: middle;
 }
